--- a/innerHTML/index.HTML
+++ b/innerHTML/index.HTML
@@ -1,23 +1,22 @@
 <html>
 	<head>
 		<script>
-			//var five = 5;
-			//var numFive = 5;
-			//var binary = false;
-
-			function question1() {
-				//alert('Do you like pop?');
-				document.getElementById("assessment").innerHTML = "Break My Soul"
-
+			function response(){
+				button = document.getElementById('button1');
+				buttonVal = button.value;
+				console.log(buttonVal);
+				if(buttonVal == 1){
+					document.body.style.backgroundColor = "black";
+					button.value=0;
+					//alert('this is button 1');
+				}
+				else if(buttonVal == 0) {
+					document.body.style.backgroundColor = "lightslategray";
+					button.value=1;
+					//alert('this is not button 1');
+				}
+				
 			}
-			function question2() {
-				//alert('Do you like rock?')
-			
-			//question1();//
-
-			//alert(five * numFive);//
-			document.getElementById("assessment").innerHTML = "Teenagers"
-		}
 		</script>
 
 		<style>
@@ -26,18 +25,8 @@
 				background-color: whitesmoke;
 				width: 100px;
 				height: 100px;
-				
-
-
 			}
-			#assessment{
-				background-color: darkslateblue;
-				width: 500px;
-				height: 500px;
-				float: right;
-				color: whitesmoke;
-
-			}
+			
 			#press{
 				float: left;
 				width: 100px;
@@ -49,16 +38,12 @@
 
 	<body>
 		<div id="press">
-			<button onclick="question1()">Do you like pop?</button>
-			<button onclick="question2()">Do you like rock?</button>
+			<button onclick="response()" value=1 id="button1"></button>
+			<button onclick="response()" value=2></button>
+			<button onclick="response()" value=3></button>
 			
 		</div>
-		<div id="assessment">
-			<p>Your song rec is: </p>
-
-			
-
-		</div>
+		
 
 
 	</body>
