--- a/innerHTML/index.HTML
+++ b/innerHTML/index.HTML
@@ -5,30 +5,33 @@
 				button = document.getElementById('button1');
 				buttonVal = button.value;
 				console.log(buttonVal);
-				if(buttonVal == 1){
+				if(buttonVal == 0){
 					document.body.style.backgroundColor = "black";
-					button.value=0;
+					button.value=1;
 					//alert('this is button 1');
 				}
-				else if(buttonVal == 0) {
-					document.body.style.backgroundColor = "lightslategray";
-					button.value=1;
+				else if(buttonVal == 1) {
+					document.body.style.backgroundColor = "slategray";
+					button.value=2;
 					//alert('this is not button 1');
 				}
+				else if(buttonVal=2){
+					document.body.style.backgroundColor = "whitesmoke";
+					button.value=0;
+				} 
 				
 			}
 		</script>
 
 		<style>
 			button{
-				color:slategray;
-				background-color: whitesmoke;
+				background-color: blue;
 				width: 100px;
 				height: 100px;
 			}
 			
 			#press{
-				float: left;
+				float: center;
 				width: 100px;
 			}
 
@@ -39,8 +42,7 @@
 	<body>
 		<div id="press">
 			<button onclick="response()" value=1 id="button1"></button>
-			<button onclick="response()" value=2></button>
-			<button onclick="response()" value=3></button>
+			
 			
 		</div>
 		
