--- a/innerHTML/exquisiteresuse.HTML
+++ b/innerHTML/exquisiteresuse.HTML
@@ -32,20 +32,25 @@
 
 
 			}
+			p,img{
+				margin:10px;
+			}
 			#white{
 				background-color: white;
 				width: 70%;
 				height: 480px;
 				border-top: 10px solid #1DBDB4;
 				float:left;
+
 			}
 
-				#sidebar{
-				background-color: yellow;
+				.sidebar{
+				background-color: white;
 				float: right;
 				width: 25%;
-				height: 480px;
+				height: 150px;
 				border-top: 10px solid #1DBDB4;
+
 			}
 
 			#status{
@@ -109,7 +114,7 @@ li a {
 
 				</div>
 
-				<div id="sidebar">
+				<div class="sidebar">
 				</div>
 
 
